New bamboo hat, tooltip to repair armors, and all translations.

--- a/src/main/resources/assets/armoroftheages/lang/af_za.json
+++ b/src/main/resources/assets/armoroftheages/lang/af_za.json
@@ -1,40 +1,41 @@
 {
-    "itemGroup.armoroftheages": "Dawn of Time : Builder Edition",
-    "item.armoroftheages.iron_plate_armor_head": "Iron Plate Helmet",
-    "item.armoroftheages.iron_plate_armor_chest": "Iron Plate Chestplate",
-    "item.armoroftheages.iron_plate_armor_legs": "Iron Plate Leggings",
-    "item.armoroftheages.iron_plate_armor_feet": "Iron Plate Boots",
-    "item.armoroftheages.holy_armor_head": "Holy Helmet",
-    "item.armoroftheages.holy_armor_chest": "Holy Chestplate",
-    "item.armoroftheages.holy_armor_legs": "Holy Leggings",
-    "item.armoroftheages.holy_armor_feet": "Holy Boots",
-    "item.armoroftheages.bamboo_hat": "Bamboo Hat",
-    "item.armoroftheages.japanese_light_armor_head": "Dō-maru Helmet",
-    "item.armoroftheages.japanese_light_armor_chest": "Dō-maru Chestplate",
-    "item.armoroftheages.japanese_light_armor_legs": "Dō-maru Leggings",
+    "itemGroup.armoroftheages": "Pantser van die Eeue",
+    "item.armoroftheages.iron_plate_armor_head": "Ysterplaat Helm",
+    "item.armoroftheages.iron_plate_armor_chest": "Ysterplaat Borsplaat",
+    "item.armoroftheages.iron_plate_armor_legs": "Ysterplaat Broek",
+    "item.armoroftheages.iron_plate_armor_feet": "Ysterplaat Boots",
+    "item.armoroftheages.holy_armor_head": "Heilige Helm",
+    "item.armoroftheages.holy_armor_chest": "Heilige Borsplaat",
+    "item.armoroftheages.holy_armor_legs": "Heilige Broek",
+    "item.armoroftheages.holy_armor_feet": "Heilige Boots",
+    "item.armoroftheages.bamboo_hat": "Bamboe Hoed",
+    "item.armoroftheages.japanese_light_armor_head": "Dō-maru Helm",
+    "item.armoroftheages.japanese_light_armor_chest": "Dō-maru Borsplaat",
+    "item.armoroftheages.japanese_light_armor_legs": "Dō-maru Broek",
     "item.armoroftheages.japanese_light_armor_feet": "Dō-maru Boots",
-    "item.armoroftheages.o_yoroi_armor_head": "O-Yoroi Helmet",
-    "item.armoroftheages.o_yoroi_armor_chest": "O-Yoroi Chestplate",
-    "item.armoroftheages.o_yoroi_armor_legs": "O-Yoroi Leggings",
+    "item.armoroftheages.o_yoroi_armor_head": "O-Yoroi Helm",
+    "item.armoroftheages.o_yoroi_armor_chest": "O-Yoroi Borsplaat",
+    "item.armoroftheages.o_yoroi_armor_legs": "O-Yoroi Broek",
     "item.armoroftheages.o_yoroi_armor_feet": "O-Yoroi Boots",
-    "item.armoroftheages.raijin_armor_head": "Raijin Helmet",
-    "item.armoroftheages.raijin_armor_chest": "Raijin Chestplate",
-    "item.armoroftheages.raijin_armor_legs": "Raijin Leggings",
+    "item.armoroftheages.raijin_armor_head": "Raijin Helm",
+    "item.armoroftheages.raijin_armor_chest": "Raijin Borsplaat",
+    "item.armoroftheages.raijin_armor_legs": "Raijin Broek",
     "item.armoroftheages.raijin_armor_feet": "Raijin Boots",
-    "item.armoroftheages.quetzalcoatl_armor_head": "Skull-adorned Quetzalcoatl Crown",
-    "item.armoroftheages.quetzalcoatl_armor_chest": "Gilded Quetzalcoatl Ornaments",
-    "item.armoroftheages.quetzalcoatl_armor_legs": "Adorned Quetzalcoatl Loincloth",
-    "item.armoroftheages.quetzalcoatl_armor_feet": "Feathered Quetzalcoatl Footwear",
-    "item.armoroftheages.centurion_armor_head": "Centurion Plumed Helmet",
-    "item.armoroftheages.centurion_armor_chest": "Centurion Cuirass",
+    "item.armoroftheages.quetzalcoatl_armor_head": "Skedel-versierde Quetzalcoatl Kroon",
+    "item.armoroftheages.quetzalcoatl_armor_chest": "Vergulde Quetzalcoatl Ornamente",
+    "item.armoroftheages.quetzalcoatl_armor_legs": "Versierde Quetzalcoatl Lendeband",
+    "item.armoroftheages.quetzalcoatl_armor_feet": "Geveerde Quetzalcoatl Skoene",
+    "item.armoroftheages.centurion_armor_head": "Centurion Gepluimde Helm",
+    "item.armoroftheages.centurion_armor_chest": "Centurion Kuras",
     "item.armoroftheages.centurion_armor_legs": "Centurion Greaves",
-    "item.armoroftheages.centurion_armor_feet": "Centurion Sandals",
-    "item.armoroftheages.pharaoh_armor_head": "Pharaoh Headdress",
-    "item.armoroftheages.pharaoh_armor_chest": "Pharaohs Clothes",
-    "item.armoroftheages.pharaoh_armor_legs": "Pharaohs Shendyts",
-    "item.armoroftheages.pharaoh_armor_feet": "Pharaohs Sandals",
-    "item.armoroftheages.anubis_armor_head": "Anubis Headdress",
-    "item.armoroftheages.anubis_armor_chest": "Anubis Chest",
+    "item.armoroftheages.centurion_armor_feet": "Centurion Sandale",
+    "item.armoroftheages.pharaoh_armor_head": "Farao Hoofdoek",
+    "item.armoroftheages.pharaoh_armor_chest": "Farao Klere",
+    "item.armoroftheages.pharaoh_armor_legs": "Farao Shendyts",
+    "item.armoroftheages.pharaoh_armor_feet": "Farao Sandale",
+    "item.armoroftheages.anubis_armor_head": "Anubis Hoofdoek",
+    "item.armoroftheages.anubis_armor_chest": "Anubis Borsplaat",
     "item.armoroftheages.anubis_armor_legs": "Anubis Shendyts",
-    "item.armoroftheages.anubis_armor_feet": "Anubis Bracelets"
+    "item.armoroftheages.anubis_armor_feet": "Anubis Armbande",
+    "tooltip.armoroftheages.repair_with": "Kan herstel word met: "
 }
