--- a/src/main/resources/assets/armoroftheages/lang/ar_sa.json
+++ b/src/main/resources/assets/armoroftheages/lang/ar_sa.json
@@ -1,40 +1,41 @@
 {
-    "itemGroup.armoroftheages": "Dawn of Time : Builder Edition",
-    "item.armoroftheages.iron_plate_armor_head": "Iron Plate Helmet",
-    "item.armoroftheages.iron_plate_armor_chest": "Iron Plate Chestplate",
-    "item.armoroftheages.iron_plate_armor_legs": "Iron Plate Leggings",
-    "item.armoroftheages.iron_plate_armor_feet": "Iron Plate Boots",
-    "item.armoroftheages.holy_armor_head": "Holy Helmet",
-    "item.armoroftheages.holy_armor_chest": "Holy Chestplate",
-    "item.armoroftheages.holy_armor_legs": "Holy Leggings",
-    "item.armoroftheages.holy_armor_feet": "Holy Boots",
-    "item.armoroftheages.bamboo_hat": "Bamboo Hat",
-    "item.armoroftheages.japanese_light_armor_head": "Dō-maru Helmet",
-    "item.armoroftheages.japanese_light_armor_chest": "Dō-maru Chestplate",
-    "item.armoroftheages.japanese_light_armor_legs": "Dō-maru Leggings",
-    "item.armoroftheages.japanese_light_armor_feet": "Dō-maru Boots",
-    "item.armoroftheages.o_yoroi_armor_head": "O-Yoroi Helmet",
-    "item.armoroftheages.o_yoroi_armor_chest": "O-Yoroi Chestplate",
-    "item.armoroftheages.o_yoroi_armor_legs": "O-Yoroi Leggings",
-    "item.armoroftheages.o_yoroi_armor_feet": "O-Yoroi Boots",
-    "item.armoroftheages.raijin_armor_head": "Raijin Helmet",
-    "item.armoroftheages.raijin_armor_chest": "Raijin Chestplate",
-    "item.armoroftheages.raijin_armor_legs": "Raijin Leggings",
-    "item.armoroftheages.raijin_armor_feet": "Raijin Boots",
-    "item.armoroftheages.quetzalcoatl_armor_head": "Skull-adorned Quetzalcoatl Crown",
-    "item.armoroftheages.quetzalcoatl_armor_chest": "Gilded Quetzalcoatl Ornaments",
-    "item.armoroftheages.quetzalcoatl_armor_legs": "Adorned Quetzalcoatl Loincloth",
-    "item.armoroftheages.quetzalcoatl_armor_feet": "Feathered Quetzalcoatl Footwear",
-    "item.armoroftheages.centurion_armor_head": "Centurion Plumed Helmet",
-    "item.armoroftheages.centurion_armor_chest": "Centurion Cuirass",
-    "item.armoroftheages.centurion_armor_legs": "Centurion Greaves",
-    "item.armoroftheages.centurion_armor_feet": "Centurion Sandals",
-    "item.armoroftheages.pharaoh_armor_head": "Pharaoh Headdress",
-    "item.armoroftheages.pharaoh_armor_chest": "Pharaohs Clothes",
-    "item.armoroftheages.pharaoh_armor_legs": "Pharaohs Shendyts",
-    "item.armoroftheages.pharaoh_armor_feet": "Pharaohs Sandals",
-    "item.armoroftheages.anubis_armor_head": "Anubis Headdress",
-    "item.armoroftheages.anubis_armor_chest": "Anubis Chest",
-    "item.armoroftheages.anubis_armor_legs": "Anubis Shendyts",
-    "item.armoroftheages.anubis_armor_feet": "Anubis Bracelets"
+    "itemGroup.armoroftheages": "درع العصور",
+    "item.armoroftheages.iron_plate_armor_head": "خوذة لوحة حديدية",
+    "item.armoroftheages.iron_plate_armor_chest": "درع لوحة حديدية",
+    "item.armoroftheages.iron_plate_armor_legs": "سراويل لوحة حديدية",
+    "item.armoroftheages.iron_plate_armor_feet": "أحذية لوحة حديدية",
+    "item.armoroftheages.holy_armor_head": "قناع مقدس",
+    "item.armoroftheages.holy_armor_chest": "درع مقدس",
+    "item.armoroftheages.holy_armor_legs": "سراويل مقدسة",
+    "item.armoroftheages.holy_armor_feet": "أحذية مقدسة",
+    "item.armoroftheages.bamboo_hat": "قبعة من الخيزران",
+    "item.armoroftheages.japanese_light_armor_head": "خوذة دو-مارو",
+    "item.armoroftheages.japanese_light_armor_chest": "درع دو-مارو",
+    "item.armoroftheages.japanese_light_armor_legs": "سراويل دو-مارو",
+    "item.armoroftheages.japanese_light_armor_feet": "أحذية دو-مارو",
+    "item.armoroftheages.o_yoroi_armor_head": "خوذة أو-يوروي",
+    "item.armoroftheages.o_yoroi_armor_chest": "درع أو-يوروي",
+    "item.armoroftheages.o_yoroi_armor_legs": "سراويل أو-يوروي",
+    "item.armoroftheages.o_yoroi_armor_feet": "أحذية أو-يوروي",
+    "item.armoroftheages.raijin_armor_head": "خوذة رايجين",
+    "item.armoroftheages.raijin_armor_chest": "درع رايجين",
+    "item.armoroftheages.raijin_armor_legs": "سراويل رايجين",
+    "item.armoroftheages.raijin_armor_feet": "أحذية رايجين",
+    "item.armoroftheages.quetzalcoatl_armor_head": "تاج كيتزالكواتل مطعم بالجماجم",
+    "item.armoroftheages.quetzalcoatl_armor_chest": "تزيينات كيتزالكواتل مطلية بالذهب",
+    "item.armoroftheages.quetzalcoatl_armor_legs": "سروال كيتزالكواتل مزين",
+    "item.armoroftheages.quetzalcoatl_armor_feet": "أحذية كيتزالكواتل مزينة بالريش",
+    "item.armoroftheages.centurion_armor_head": "خوذة القائد الروماني المزينة بالريش",
+    "item.armoroftheages.centurion_armor_chest": "درع القائد الروماني",
+    "item.armoroftheages.centurion_armor_legs": "سروال القائد الروماني",
+    "item.armoroftheages.centurion_armor_feet": "صنادل القائد الروماني",
+    "item.armoroftheages.pharaoh_armor_head": "تاج الفرعون",
+    "item.armoroftheages.pharaoh_armor_chest": "ثياب الفرعون",
+    "item.armoroftheages.pharaoh_armor_legs": "شنطة الفرعون",
+    "item.armoroftheages.pharaoh_armor_feet": "صنادل الفرعون",
+    "item.armoroftheages.anubis_armor_head": "تاج أنوبيس",
+    "item.armoroftheages.anubis_armor_chest": "درع أنوبيس",
+    "item.armoroftheages.anubis_armor_legs": "شنطة أنوبيس",
+    "item.armoroftheages.anubis_armor_feet": "أساور أنوبيس",
+    "tooltip.armoroftheages.repair_with": "يمكن إصلاحه بواسطة: "
 }
